# modulog

./: .gitignore  .gitmodules  Agent.cpp  Agent.h  AgentClient.cpp  AgentClient.h  AgentHandler.cpp  AgentHandler.h  CMakeLists.txt  Client.cpp  Client.h  ControlMessage.cpp  ControlMessage.h  Core.cpp  Core.h  LogMessage.cpp  LogMessage.h  LogSaver.cpp  LogSaver.h  Message.cpp  Message.h  MessageDeserializer.cpp  MessageDeserializer.h  MessageHandler.cpp  MessageHandler.h  MessageSerializer.cpp  MessageSerializer.h  README.md  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  agent-memory-logger.cpp  agents-list.conf  agents-list.txt  agents-to-compile.json  inf-loop.sh  main.cpp  notes.md  process1.cpp  (+1 more)
agent-client/: CMakeLists.txt
agent-client/include/modulog/agent_client/: AgentClient.hpp  ClientFactory.hpp  Helpers.hpp  StandaloneAgentClient.hpp  TcpAgentClient.hpp
agent-client/src/modulog/agent_client/: AgentClient.cpp  ClientFactory.cpp  Helpers.cpp  StandaloneAgentClient.cpp  TcpAgentClient.cpp
agents/: CMakeLists.txt
agents/linux-system-monitoring-lib-agent/: CMakeLists.txt  README.md  config.json  linux-system-monitoring-lib-agent.cpp
agents/memory-logger/: CMakeLists.txt  config.json5  memory-logger.cpp
agents/net-connectivity-agent/: CMakeLists.txt  README.md  config.json  net-connectivity-agent.cpp
agents/net-connectivity-logger/: CMakeLists.txt  README.md  config.json  net-connectivity-logger.cpp
agents/ram-agent/: CMakeLists.txt  README.md  config.json  ram-agent.cpp
agents/ram-logger/: CMakeLists.txt  README.md  config.json5  ram-logger.cpp
agents/smart-agent/: CMakeLists.txt  README.md  config.json  smart-agent.cpp
agents/space-agent/: CMakeLists.txt  README.md  config.json  space-agent.cpp
agents/space-agent/include/modulog/space_agent/: DirInfo.hpp  MountInfo.hpp  SpaceInfo.hpp
agents/space-agent/src/modulog/space_agent/: DirInfo.cpp  MountInfo.cpp  SpaceInfo.cpp
agents/space-logger/: CMakeLists.txt  README.md  config.json5  space-logger.cpp
agents/temperature-agent/: CMakeLists.txt  README.md  config.json  temperature-agent.cpp
agents/temperature-logger/: CMakeLists.txt  README.md  config.json5  temperature-logger.cpp
agents/test-random-agent/: CMakeLists.txt  README.md  config.json  test-random-agent.cpp
agents/test-random-logger/: CMakeLists.txt  README.md  config.json  test-random-logger.cpp
agents/udp-watchdog-agent/: CMakeLists.txt  README.md  config.json  udp-watchdog-agent.cpp
agents/uptime-agent/: CMakeLists.txt  README.md  config.json  uptime-agent.cpp
agents/uptime-logger/: CMakeLists.txt  README.md  agent-uptime-logger.cpp  config.json5  uptime-logger.cpp
communication/: CMakeLists.txt
communication/include/: AgentClient.h  AgentClient.hpp  ControlMessage.h  ControlMessage.hpp  Helpers.hpp  LogMessage.h  LogMessage.hpp  Message.h  MessageDeserializer.h  MessageDeserializer.hpp  MessageExchanger.h  MessageExchanger.hpp  MessageProcessor.h  MessageProcessor.hpp  MessageSerializer.h  MessageSerializer.hpp  TcpConnection.h  TcpConnection.hpp  TcpServer.h  TcpServer.hpp
communication/include/modulog/communication/: ControlMessage.hpp  LogMessage.hpp  Message.hpp  MessageDeserializer.hpp  MessageExchanger.hpp  MessageProcessor.hpp  MessageSerializer.hpp  SharedSettings.hpp  TcpConnection.hpp  TcpServer.hpp
communication/src/: AgentClient.cpp  ControlMessage.cpp  Helpers.cpp  LogMessage.cpp  Message.cpp  MessageDeserializer.cpp  MessageExchanger.cpp  MessageProcessor.cpp  MessageSerializer.cpp  TcpConnection.cpp  TcpServer.cpp
communication/src/modulog/communication/: ControlMessage.cpp  LogMessage.cpp  Message.cpp  MessageDeserializer.cpp  MessageExchanger.cpp  MessageProcessor.cpp  MessageSerializer.cpp  TcpConnection.cpp  TcpServer.cpp
core/: CMakeLists.txt
core/include/: Agent.h  Agent.hpp  AgentHandler.h  AgentHandler.hpp  AgentInfo.h  AgentProcess.h  Core.h  Core.hpp  LogSaver.h  LogSaver.hpp
core/include/modulog/core/: Agent.hpp  AgentHandler.hpp  AgentProcess.hpp  Core.hpp  LogSaver.hpp
core/src/: Agent.cpp  AgentHandler.cpp  AgentInfo.cpp  AgentProcess.cpp  Core.cpp  LogSaver.cpp
core/src/modulog/core/: Agent.cpp  AgentHandler.cpp  AgentProcess.cpp  Core.cpp  LogSaver.cpp
meta-lib/: CMakeLists.txt
meta-lib/include/: SharedSettings.hpp  StateGraphHandler.hpp
meta-lib/include/modulog/meta_lib/: Helpers.hpp  SharedSettings.hpp  StateGraphHandler.hpp
meta-lib/src/: StateGraphHandler.cpp
meta-lib/src/modulog/meta_lib/: Helpers.cpp  StateGraphHandler.cpp
test/: CMakeLists.txt  agents-enabled.conf  hello_test.cpp
test/agents/exiting-agent/: CMakeLists.txt  exiting-agent.cpp
test/agents/simple-log-agent/: simple-log-agent.cpp
test/smurf-test/: basicAgentOnOff-enabled-agents.conf  scenarios.json
test/smurf-test/agents/big-log-agent/: CMakeLists.txt  big-log-agent.cpp
test/smurf-test/agents/freezed-agent/: CMakeLists.txt  freezed-agent.cpp
test/smurf-test/agents/killed-agent/: CMakeLists.txt  killed-agent.cpp
test/smurf-test/agents/not-connecting-freezed-agent/: CMakeLists.txt  not-connecting-freezed-agent.cpp
test/smurf-test/agents/on-off-agent/: CMakeLists.txt  on-off-agent.cpp
test/smurf-test/agents/permanent-log-agent/: CMakeLists.txt  permanent-log-agent.cpp
test/smurf-test/agents/simple-log-agent/: CMakeLists.txt  simple-log-agent.cpp
test/smurf-test/agents/start-fail-agent/: CMakeLists.txt  start-fail-agent.cpp
test/smurf-test/agents/start-fail-delay-agent/: CMakeLists.txt  start-fail-delay-agent.cpp
test/smurf-test/aggregated_etalons/: big-log  double-kill  freezed  killed  killed-freezed  more-agents  not-connecting-freezed  not-existing  on-off  permanent-log  simple-log  start-fail  start-fail-delay
test/smurf-test/aggregated_output/: big-log  double-kill  freezed  killed  killed-freezed  more-agents  not-connecting-freezed  not-existing  on-off  permanent-log  simple-log  start-fail  start-fail-delay
test/smurf-test/evaluator_output/: big-log  double-kill  freezed  killed  killed-freezed  start-fail-delay
tests/: CMakeLists.txt
(+26 files in other folders)
