CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE source_files "src/*")

ADD_LIBRARY(MetaLib ${source_files})
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC "include/")
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(../lib/StateSmurf state-smurf-build)

TARGET_LINK_LIBRARIES(MetaLib DiagramSmurfLib TransitionSmurfLib)
