CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE source_files "src/*")

ADD_LIBRARY(MetaLib ${source_files})
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC "include/")
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

IF(BRINGAUTO_TESTS)
    TARGET_LINK_LIBRARIES(MetaLib PUBLIC DiagramSmurfLib TransitionSmurfLib)
ENDIF()

TARGET_LINK_LIBRARIES(MetaLib PUBLIC bringauto_logger::bringauto_logger)
