CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 17)
SET(AG_NAME linux-system-monitoring-lib-agent)
ADD_EXECUTABLE(${AG_NAME} ${AG_NAME}.cpp)
CONFIGURE_FILE(config.json config.json COPYONLY)
TARGET_LINK_LIBRARIES(${AG_NAME} agent_client_lib)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/lib/Linux-System-Monitoring-Library/CMakeLists.txt)
TARGET_LINK_LIBRARIES(${AG_NAME} linuxmonitoring)
IF(BRINGAUTO_INSTALL)
    INSTALL(IMPORTED_RUNTIME_ARTIFACTS linuxmonitoring DESTINATION lib)
ENDIF()
