cmake_minimum_required(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 20)
if(NOT TARGET agent_client_lib)
    add_subdirectory(../../agent-client communication-lib-build)
endif()
add_executable(smart-agent smart-agent.cpp)
configure_file(config.json config.json COPYONLY)
target_link_libraries(smart-agent agent_client_lib)
