CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 17)
SET(AG_NAME space-agent)
FILE(GLOB_RECURSE source_files "src/*")
ADD_EXECUTABLE(${AG_NAME} ${AG_NAME}.cpp ${source_files})
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC "include/")
TARGET_INCLUDE_DIRECTORIES(MetaLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
CONFIGURE_FILE(config.json config.json COPYONLY)
TARGET_LINK_LIBRARIES(${AG_NAME} agent_client_lib)
