cmake_minimum_required(VERSION 3.20)
#project(agent-memory-logger)
if(NOT TARGET agent_client_lib)
    add_subdirectory(../../agent-client)
endif()
add_executable(temperature-agent temperature-agent.cpp)
configure_file(config.json config.json COPYONLY)
target_link_libraries(temperature-agent agent_client_lib)
